--- a/app/src/main/res/layout/cardview_order.xml
+++ b/app/src/main/res/layout/cardview_order.xml
@@ -83,6 +83,10 @@
                 android:textSize="18dp"
                 />
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="5dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
